--- a/templates/index/show.html.twig
+++ b/templates/index/show.html.twig
@@ -18,6 +18,7 @@
 {% endfor %}
 
 <div class="invisible" id="key">{{ (key) }}</div>
+<div class="invisible" id="nbColumns">{{ (nbColumns) }}</div>
 <div class="container">   
     <div class="mb-5 text-right">
         <button type="button" class="btn btn-primary previous"><i class="fas fa-step-backward"></i></button>
