--- a/templates/index/show.html.twig
+++ b/templates/index/show.html.twig
@@ -28,7 +28,7 @@
     <table id="example" class="display" style="width:100%">
         <thead>           
             <tr>
-                <th></th>                               
+                <th>Profil</th>                               
                 {% for calendar in calendars %}
                     <th>{{ calendar }}</th>                    
                 {% endfor %}
