--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,18 +4,22 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        {# <link rel="stylesheet" href="/assets/css/style.css"> #}
+        {# <link rel="stylesheet" href="/assets/css/style.css">
         {# <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"> #}
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.3/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-2.0.0/sl-1.3.0/datatables.min.css"/>      
         {# <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
         <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css"> #}
+
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         
         <link rel="sylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         
         
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>
+    <body>       
+
+
         {% block body %}{% endblock %}
        <script src="https://code.jquery.com/jquery-3.3.1.js"></src>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -29,59 +33,193 @@
 
         {# <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
         <script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script> #}
+
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     
         <script>
         $(document).ready(function() {
 
-            //ContentEditable on clic
-            $(".edit-for" ).on( "click", function(){
-                $( this).css( "background-color", "#C6E2FF");                            
-                $(this).attr('contenteditable', 'true');
-                $(this).focus();
+            //function autocomplete search
+            $(function (){
+                 var availableTags = [
+                    "Projet1",
+                    "Projet2",
+                    "Amilnote",
+                    "Babiltone",
+                    "CvGenerator"                    
+                ];
+                $( "#recherche" ).autocomplete({
+                source: availableTags
+                });
             });
 
-            //Empty on double clic
-            $(".edit-for" ).on( "dblclick", function(){
-                $( this).empty(); 
-            });
-
-            //MouseLeave    
-            $(".edit-for" ).on( "mouseleave", function(){
-                $( this).css( "background-color", "transparent");
-                //$('html,body').css('cursor','crosshair');
-                $(this).attr('contenteditable', 'false');
-            });
+            //function autocomplete search
+            $(function (){
+                 var profiles = [
+                    "Junior",
+                    "Design",
+                    "Lead",
+                    "Confirmé",
+                    "Projet Web",
+                    "Projet Web",
+                    "Projet mobile Android",
+                    "Expert",
+                    "Projet Mobile IOS",
+                    "Projet Jira Interne 4",
+                    "Projet Jira Externe",
+                ];
+                $( ".profile" ).autocomplete({
+                source: profiles
+                });
+            });            
             
-            //tab = next td            
-            $('td.edit-for').on( "keydown", function(e){
+                    
+                    
+            
+            //call functions on document Ready
+            editable();
+            empty();
+            mouseLeave();
+            tabNext();
+            tabPrevious();
+
+
+            //Function editable
+            function editable() {
+                $(".edit-for" ).on( "click", function(){
+                    $(this).css( "background-color", "#C6E2FF");                            
+                    $(this).attr('contenteditable', 'true');
+                    $(this).focus();
+                });
+            }
+
+            //Function Empty on DoubleClic
+            function empty(){
+                $(".edit-for" ).on( "dblclick", function(){
+                    $( this).empty();
+                });
+            }
+
+            //Function Mouse leave
+            function mouseLeave() {
+                $(".edit-for" ).on( "mouseleave", function(){
+                    $( this).css( "background-color", "transparent");
+                    //$('html,body').css('cursor','crosshair');
+                    //$(this).attr('contenteditable', 'false');
+                });
+            }
+
+            //Function tabNext
+            function tabNext(){
+                 $('td.edit-for').on( "keydown", function(e){
                  var keyCode = e.keyCode || e.wich;                 
                 if ((e.keyCode === 9) || (e.keyCode === 39) || (e.keyCode === 13)) {
                     e.preventDefault();
                     $( this).css( "background-color", "transparent");                   
-                     var next = $(this).closest('td').next('td');
+                     var next = $(this).closest('td').next('td.edit-for');
                      next.css("background-color", "#C6E2FF");
                      next.attr('contenteditable', 'true');                     
                      next.focus();
-                } 
-            });
-            //tab = previous td
-            $('td.edit-for').on( "keydown", function(e){
+                    } 
+                });
+            }
+
+            //Function tabPrevious    
+            function tabPrevious(){
+                $('td.edit-for').on( "keydown", function(e){
                  var keyCode = e.keyCode || e.wich;                 
                 if (e.keyCode === 37 ) {
                     e.preventDefault();
                     $( this).css( "background-color", "transparent");                   
-                     var next = $(this).closest('td').prev('td');
+                     var next = $(this).closest('td').prev('td.edit-for');
                      next.css("background-color", "#C6E2FF");
                      next.attr('contenteditable', 'true');                     
                      next.focus();
+                    } 
+                });
+            }
+
+              
+           
+
+            
+            //addRow
+            $('.addRow').on( 'click', function (e) {
+                e.preventDefault();
+
+                //Rajouter la mise en mémoire du index, 
+                //Puis rendre visible tout
+                var rowHtml = $("#example").find("tr")[1].outerHTML;
+                $("#example").find('tbody').append(rowHtml);
+                editable();
+                empty();
+                mouseLeave();
+                tabNext();
+                tabPrevious();
+            } );
+
+            //Update on next, previous, enter            
+            $("td.edit-for").on( "keydown", function(e){
+                var keyCode = e.keyCode || e.wich;                 
+                if ((e.keyCode === 9) || (e.keyCode === 39) || (e.keyCode === 13) || (e.keyCode === 37 )){                    
+                    var rank = $(this).html();                                 
+                    var id = $(this).attr('id');
+                    var emptyMonth = table.column(this).title();                                      
+                    var projectName = $('#projectName').text();                                   
+                    var profile = table.row( 0 ).data()[0];                                      
+                               
+                    $.ajax({
+                        url:'/activity/update',
+                        type: "POST",
+                        dataType: "json",
+                        data: {
+                            "rank": rank,
+                            "id": id,
+                            "emptyMonth": emptyMonth,                            
+                            "projectName": projectName,
+                            "profile": profile
+                        },
+                        async: true,
+                        success: function (data)
+                        {
+                            console.log(data);
+                            $( '#rank' ).text(data.rank);
+                            $('#response').addClass("visible").removeClass("invisible");;                       
+                        }
+                    });                    
                 } 
             });
+
+           
+            
+            
+            //tab = previous td
+            
                 
 
             //Initialize var DataTable
             var table = $('#example').DataTable({                
-                    //ajax:'/ajax',                                 
+                    //ajax:'/ajax',
             });
+
+
+            
+
+            //delete row
+             $('.trash').on('click', function () {
+                let brand = $(this).parent('td').find();               
+                let txt;
+                let r = confirm("Etes-vous sûr de vouloir supprimer : \n"+ brand +' ?');
+                if (r === true) {
+                    table
+                        .row(brand)
+                        .remove()
+                        .draw();
+                } else {
+                    txt = "opération annulée!";
+                }
+                document.getElementById("titre").innerHTML = txt;
+            } );
             
 
             //initialization 11 colums array
@@ -139,25 +277,7 @@
                 $('#currentMonth').text(currentMonth);
             });
 
-            //Check
-            $('.edit-for').on( "keyup", function(){
-                var rank = $(this).html();
-                $.ajax({
-                    url:'/response',
-                    type: "POST",
-                    dataType: "json",
-                    data: {
-                        "rank": rank
-                    },
-                    async: true,
-                    success: function (data)
-                    {
-                        console.log(data);
-                        $( '#rank' ).text(data.rank);
-                        $('#response').addClass("visible").removeClass("invisible");;                       
-                    }
-                });
-            });
+            
         });
 
         </script>       
