--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,16 @@
 .jumbotron {
    background-color: #0a57c4;
 }
+
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+ }
+
+ 
+
