--- a/templates/index/show.html.twig
+++ b/templates/index/show.html.twig
@@ -75,8 +75,7 @@
                             <td class="edit-for" id = "0" ></td>
                         {% endif %}
                     {% endfor %}
-                    <td class="trash"><i class="fas fa-trash-alt"></i></td>
-                    
+                    <td class="trash"><i class="fas fa-trash-alt"></i></td>                    
                 </tr>   
                 {% endfor %} 
             </tbody>
@@ -89,7 +88,7 @@
                 </tr>
             </tfoot>        #}
         </table>
-        <button class="btn btn-primary addRow" type="submit"><i class="fa fa-plus" aria-hidden="true"></i></button>    
+        <button class="btn btn-primary addRow mb-2" type="submit"><i class="fa fa-plus" aria-hidden="true"></i></button>    
     </div>
 
 {% endblock %}
