--- a/templates/collaborators/index.html.twig
+++ b/templates/collaborators/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Collaborators index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Collaborators index</h1>
 
     <table class="table">
@@ -38,4 +39,5 @@
     </table>
 
     <a href="{{ path('collaborators_new') }}">Create new</a>
+</div>
 {% endblock %}
