--- a/templates/pole/index.html.twig
+++ b/templates/pole/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Pole index{% endblock %}
 
 {% block body %}
+<div class="container">
     <h1>Pole index</h1>
 
     <table class="table">
@@ -34,4 +35,5 @@
     </table>
 
     <a href="{{ path('pole_new') }}">Create new</a>
+</div>
 {% endblock %}
