--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Profile index{% endblock %}
 
 {% block body %}
+<div class="container">    
     <h1>Profile index</h1>
 
     <table class="table">
@@ -34,4 +35,5 @@
     </table>
 
     <a href="{{ path('profile_new') }}">Create new</a>
+</div>
 {% endblock %}
